--- a/AddressBookLinq/AddressBookLinq.csproj
+++ b/AddressBookLinq/AddressBookLinq.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+  </ItemGroup>
+
 </Project>
